--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
             border-collapse: separate;
             border-spacing: 0 10px;
             margin-top: 20px;
+            overflow-x: auto;
+            display: block;
         }
         .devices-table th, .devices-table td, .users-table th, .users-table td, .stats-table th, .stats-table td {
             padding: 15px;
@@ -250,9 +252,11 @@
             margin-bottom: 20px;
             display: flex;
             gap: 10px;
+            flex-wrap: wrap;
         }
         .search-bar input {
-            width: 100%;
+            flex: 1;
+            min-width: 200px;
             padding: 12px;
             border-radius: 10px;
             background: rgba(255, 255, 255, 0.2);
@@ -298,7 +302,7 @@
         .danger-button:hover {
             background: #c0392b;
         }
-        @media (max-width: 768px) {
+        @media (max-width: 1024px) {
             .sidebar {
                 width: 250px;
             }
@@ -311,36 +315,70 @@
             .main-content.full {
                 margin-right: 0;
             }
-            .modal-content {
-                width: 90%;
-                max-height: 70vh;
-            }
             .stats {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             }
         }
-        @media (max-width: 480px) {
-            .menu-toggle {
-                display: block;
-            }
+        @media (max-width: 768px) {
             .sidebar {
-                transform: translateX(0);
+                width: 250px;
+                transform: translateX(250px);
             }
             .sidebar.closed {
                 transform: translateX(250px);
             }
-            .main-content {
-                margin-right: 250px;
+            .menu-toggle {
+                display: block;
             }
-            .main-content.full {
+            .main-content {
                 margin-right: 0;
+                padding: 20px;
+            }
+            .header {
+                flex-direction: column;
+                text-align: center;
             }
             .header h1 {
                 font-size: 2rem;
             }
+            .stats {
+                grid-template-columns: 1fr;
+            }
+            .devices-table, .stats-table, .users-table {
+                overflow-x: auto;
+            }
+            .modal-content {
+                width: 90%;
+                max-height: 70vh;
+            }
+        }
+        @media (max-width: 480px) {
+            .sidebar {
+                width: 100%;
+                transform: translateX(100%);
+            }
+            .sidebar.closed {
+                transform: translateX(100%);
+            }
+            .main-content {
+                padding: 15px;
+            }
+            .header h1 {
+                font-size: 1.8rem;
+            }
+            .form-group input, .form-group select, .form-group textarea {
+                font-size: 0.9rem;
+            }
+            .search-bar {
+                flex-direction: column;
+            }
             .modal-content {
                 width: 95%;
                 max-height: 65vh;
+            }
+            .devices-table th, .devices-table td {
+                padding: 10px;
+                font-size: 0.8rem;
             }
         }
     </style>
@@ -1004,7 +1042,7 @@
                 const sidebar = document.getElementById('sidebar');
                 const menuToggle = document.querySelector('.menu-toggle');
                 if (loginModal) loginModal.style.display = 'flex';
-                if (sidebar) sidebar.getElementsByClassName('closed');
+                if (sidebar) sidebar.classList.add('closed');
                 if (menuToggle) menuToggle.style.display = 'none';
                 document.querySelectorAll('.section').forEach(section => section.classList.remove('active'));
                 const loginForm = document.getElementById('loginForm');
