--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         @media (max-width: 768px) {
             .sidebar {
                 width: 100%;
-                transform: translateX(100%);
+                transform: translateX(0);
             }
             .sidebar.closed {
                 transform: translateX(100%);
@@ -368,6 +368,9 @@
             }
             .sidebar {
                 width: 100%;
+                transform: translateX(0);
+            }
+            .sidebar.closed {
                 transform: translateX(100%);
             }
             .main-content {
@@ -411,58 +414,34 @@
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
     <script type="module">
+        // استيراد الوحدات المطلوبة من Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
         import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
         import { getFirestore, collection, addDoc, doc, setDoc, getDoc, getDocs, updateDoc, deleteDoc, query, orderBy, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
+        // إعدادات Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyCysmZUdUYEGQ3ODBoHFgo_n6WRgcSnUhs",
             authDomain: "management-system-6afbd.firebaseapp.com",
             projectId: "management-system-6afbd",
-            storageBucket: "management-system-6afbd.appspot.com",
+            storageBucket: "management-system-6afbd.firebasestorage.app",
             messagingSenderId: "593129749958",
             appId: "1:593129749958:web:886e812c9220375e5e86c7",
             measurementId: "G-G4LNGD3G4B"
         };
 
+        // تهيئة Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
 
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-            return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-            if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-                try {
-                    var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                    var firstSheetName = workbook.SheetNames[0];
-                    var worksheet = workbook.Sheets[firstSheetName];
-                    var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                    var filteredData = jsonData.filter(row => row.some(filledCell));
-                    var headerRowIndex = filteredData.findIndex((row, index) =>
-                        row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                    );
-                    if (headerRowIndex === -1 || headerRowIndex > 25) {
-                        headerRowIndex = 0;
-                    }
-                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                    csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                    return csv;
-                } catch (e) {
-                    console.error(e);
-                    return "";
-                }
-            }
-            return gk_fileData[filename] || "";
-        }
+        // Base64-encoded Amiri font for jsPDF (يجب استبداله بقيمة base64 حقيقية)
+        const amiriFontBase64 = 'data:application/font-ttf;base64,...'; // استبدل بقيمة base64 لخط Amiri
 
         let devices = [];
         let users = [];
@@ -471,6 +450,7 @@
         let shopContact = localStorage.getItem('shopContact') || "01012345678";
         let theme = localStorage.getItem('theme') || "default";
         let currentInvoiceDevice = null;
+        let isInitialized = false;
 
         async function initUsers() {
             const usersSnapshot = await getDocs(collection(db, 'users'));
@@ -495,7 +475,7 @@
             const toggleButton = document.querySelector('.menu-toggle');
             sidebar.classList.toggle('closed');
             mainContent.classList.toggle('full');
-            toggleButton.textContent = sidebar.classList.contains('closed') ? '☰' : '✖';
+            toggleButton.innerHTML = sidebar.classList.contains('closed') ? '<i class="fas fa-bars"></i>' : '<i class="fas fa-times"></i>';
         }
 
         function showSection(sectionId) {
@@ -510,7 +490,8 @@
 
         async function setupAddDeviceListener() {
             const addDeviceForm = document.getElementById('addDeviceForm');
-            if (addDeviceForm) {
+            if (addDeviceForm && !addDeviceForm.dataset.listener) {
+                addDeviceForm.dataset.listener = 'true';
                 addDeviceForm.addEventListener('submit', async e => {
                     e.preventDefault();
                     if (!currentUser) return alert('يرجى تسجيل الدخول!');
@@ -644,7 +625,8 @@
 
         async function setupEditDeviceListener() {
             const editDeviceForm = document.getElementById('editDeviceForm');
-            if (editDeviceForm) {
+            if (editDeviceForm && !editDeviceForm.dataset.listener) {
+                editDeviceForm.dataset.listener = 'true';
                 editDeviceForm.addEventListener('submit', async e => {
                     e.preventDefault();
                     const id = document.getElementById('editDeviceId').value;
@@ -695,7 +677,8 @@
 
         function setupSearchListener() {
             const searchInput = document.getElementById('searchInput');
-            if (searchInput) {
+            if (searchInput && !searchInput.dataset.listener) {
+                searchInput.dataset.listener = 'true';
                 searchInput.addEventListener('input', () => {
                     updateDeviceList(searchInput.value.trim());
                 });
@@ -746,18 +729,13 @@
             if (!currentInvoiceDevice) return alert('لا يوجد جهاز محدد!');
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
-            const fontUrl = 'https://raw.githubusercontent.com/aliftype/amiri/main/fonts/amiri-regular.ttf';
             try {
-                const response = await fetch(fontUrl);
-                if (!response.ok) throw new Error('فشل تحميل الخط');
-                const fontData = await response.arrayBuffer();
-                const fontUint8Array = new Uint8Array(fontData);
-                doc.addFileToVFS('amiri-regular.ttf', fontUint8Array);
+                doc.addFileToVFS('amiri-regular.ttf', amiriFontBase64);
                 doc.addFont('amiri-regular.ttf', 'Amiri', 'normal');
                 doc.setFont('Amiri');
             } catch (error) {
                 console.error('خطأ في تحميل الخط:', error);
-                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من الاتصال بالإنترنت.');
+                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من توفر الخط.');
                 return;
             }
             doc.setFontSize(16);
@@ -878,18 +856,13 @@
             if (currentUser?.role !== 'admin') return alert('ليس لديك صلاحية لتصدير التقارير!');
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
-            const fontUrl = 'https://raw.githubusercontent.com/aliftype/amiri/main/fonts/amiri-regular.ttf';
             try {
-                const response = await fetch(fontUrl);
-                if (!response.ok) throw new Error('فشل تحميل الخط');
-                const fontData = await response.arrayBuffer();
-                const fontUint8Array = new Uint8Array(fontData);
-                doc.addFileToVFS('amiri-regular.ttf', fontUint8Array);
+                doc.addFileToVFS('amiri-regular.ttf', amiriFontBase64);
                 doc.addFont('amiri-regular.ttf', 'Amiri', 'normal');
                 doc.setFont('Amiri');
             } catch (error) {
                 console.error('خطأ في تحميل الخط:', error);
-                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من الاتصال بالإنترنت.');
+                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من توفر الخط.');
                 return;
             }
             doc.setFontSize(16);
@@ -937,18 +910,13 @@
             if (currentUser?.role !== 'admin') return alert('ليس لديك صلاحية لتصدير التقارير!');
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
-            const fontUrl = 'https://raw.githubusercontent.com/aliftype/amiri/main/fonts/amiri-regular.ttf';
             try {
-                const response = await fetch(fontUrl);
-                if (!response.ok) throw new Error('فشل تحميل الخط');
-                const fontData = await response.arrayBuffer();
-                const fontUint8Array = new Uint8Array(fontData);
-                doc.addFileToVFS('amiri-regular.ttf', fontUint8Array);
+                doc.addFileToVFS('amiri-regular.ttf', amiriFontBase64);
                 doc.addFont('amiri-regular.ttf', 'Amiri', 'normal');
                 doc.setFont('Amiri');
             } catch (error) {
                 console.error('خطأ في تحميل الخط:', error);
-                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من الاتصال بالإنترنت.');
+                alert('حدث خطأ في تحميل خط Amiri. يرجى التأكد من توفر الخط.');
                 return;
             }
             doc.setFontSize(16);
@@ -994,7 +962,8 @@
 
         async function setupSettingsListener() {
             const settingsForm = document.getElementById('settingsForm');
-            if (settingsForm) {
+            if (settingsForm && !settingsForm.dataset.listener) {
+                settingsForm.dataset.listener = 'true';
                 settingsForm.addEventListener('submit', async e => {
                     e.preventDefault();
                     if (currentUser?.role !== 'admin') return alert('ليس لديك صلاحية لحفظ الإعدادات!');
@@ -1080,7 +1049,8 @@
 
         async function setupAddUserListener() {
             const addUserForm = document.getElementById('addUserForm');
-            if (addUserForm) {
+            if (addUserForm && !addUserForm.dataset.listener) {
+                addUserForm.dataset.listener = 'true';
                 addUserForm.addEventListener('submit', async e => {
                     e.preventDefault();
                     if (currentUser?.role !== 'admin') return alert('ليس لديك صلاحية لإضافة مستخدم!');
@@ -1130,10 +1100,12 @@
             if (uid === auth.currentUser?.uid) return alert('لا يمكن حذف حسابك الحالي!');
             if (confirm('هل أنت متأكد من حذف هذا المستخدم؟')) {
                 try {
+                    // ملاحظة: حذف المستخدم في Firebase Auth يتطلب Admin SDK أو إعادة مصادقة
+                    // يجب التعامل مع هذا عبر الخادم للأمان
                     await deleteDoc(doc(db, 'users', uid));
                     users = users.filter(u => u.uid !== uid);
                     updateUsersList();
-                    alert('تم حذف المستخدم بنجاح!');
+                    alert('تم حذف المستخدم بنجاح! (ملاحظة: حذف حساب Firebase Auth يتطلب معالجة من الخادم)');
                 } catch (error) {
                     console.error('Error deleting user:', error);
                     alert('حدث خطأ أثناء حذف المستخدم.');
@@ -1143,7 +1115,8 @@
 
         async function setupLoginListener() {
             const loginForm = document.getElementById('loginForm');
-            if (loginForm) {
+            if (loginForm && !loginForm.dataset.listener) {
+                loginForm.dataset.listener = 'true';
                 loginForm.addEventListener('submit', async e => {
                     e.preventDefault();
                     const username = document.getElementById('username').value.trim();
@@ -1214,6 +1187,8 @@
         }
 
         window.addEventListener('load', async () => {
+            if (isInitialized) return;
+            isInitialized = true;
             await initUsers();
             updateDateTime();
             setInterval(updateDateTime, 60000);
@@ -1270,16 +1245,16 @@
     </script>
 </head>
 <body>
-    <button class="menu-toggle" onclick="toggleSidebar()">✖</button>
+    <button class="menu-toggle" onclick="toggleSidebar()"><i class="fas fa-times"></i></button>
     <div class="sidebar" id="sidebar">
         <h2>لوحة التحكم</h2>
         <ul>
-            <li><a href="#" onclick="showSection('dashboard');"><i>🏠</i> الرئيسية</a></li>
-            <li><a href="#" onclick="showSection('add-device');"><i>➕</i> إضافة جهاز</a></li>
-            <li><a href="#" onclick="showSection('devices');"><i>📋</i> قائمة الأجهزة</a></li>
-            <li><a href="#" onclick="showSection('reports');"><i>📊</i> التقارير</a></li>
-            <li><a href="#" onclick="showSection('settings');"><i>⚙️</i> الإعدادات</a></li>
-            <li><a href="#" onclick="logout()"><i>🚪</i> تسجيل الخروج</a></li>
+            <li><a href="#" onclick="showSection('dashboard');"><i class="fas fa-home"></i> الرئيسية</a></li>
+            <li><a href="#" onclick="showSection('add-device');"><i class="fas fa-plus"></i> إضافة جهاز</a></li>
+            <li><a href="#" onclick="showSection('devices');"><i class="fas fa-list"></i> قائمة الأجهزة</a></li>
+            <li><a href="#" onclick="showSection('reports');"><i class="fas fa-chart-bar"></i> التقارير</a></li>
+            <li><a href="#" onclick="showSection('settings');"><i class="fas fa-cog"></i> الإعدادات</a></li>
+            <li><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> تسجيل الخروج</a></li>
         </ul>
     </div>
 
@@ -1521,42 +1496,43 @@
                     <button type="submit">تسجيل الدخول</button>
                     <p class="error" id="errorMessage">اسم المستخدم أو كلمة المرور غير صحيحة!</p>
                 </form>
+                            </form>
             </div>
         </div>
 
         <div id="editDeviceModal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeEditDeviceModal()">&times;</span>
-                <h2>تعديل جهاز</h2>
+                <h2>تعديل الجهاز</h2>
                 <form id="editDeviceForm">
                     <input type="hidden" id="editDeviceId">
                     <div class="form-group">
                         <label for="editDeviceName">اسم الجهاز:</label>
-                        <input type="text" id="editDeviceName" name="editDeviceName" required>
+                        <input type="text" id="editDeviceName" required>
                     </div>
                     <div class="form-group">
                         <label for="editCustomerName">اسم العميل:</label>
-                        <input type="text" id="editCustomerName" name="editCustomerName" required>
+                        <input type="text" id="editCustomerName" required>
                     </div>
                     <div class="form-group">
                         <label for="editIssue">وصف العطل:</label>
-                        <textarea id="editIssue" name="editIssue" required></textarea>
+                        <textarea id="editIssue" required></textarea>
                     </div>
                     <div class="form-group">
                         <label for="editContact">رقم التواصل:</label>
-                        <input type="tel" id="editContact" name="editContact" required>
+                        <input type="tel" id="editContact" required>
                     </div>
                     <div class="form-group">
                         <label for="editPrice">سعر الصيانة (جنيه):</label>
-                        <input type="number" id="editPrice" name="editPrice" required step="0.01" min="0">
+                        <input type="number" id="editPrice" required step="0.01" min="0">
                     </div>
                     <div class="form-group">
                         <label for="editPaidAmount">المبلغ المدفوع (جنيه):</label>
-                        <input type="number" id="editPaidAmount" name="editPaidAmount" required step="0.01" min="0">
+                        <input type="number" id="editPaidAmount" required step="0.01" min="0">
                     </div>
                     <div class="form-group">
                         <label for="editStatus">حالة الجهاز:</label>
-                        <select id="editStatus" name="editStatus" required>
+                        <select id="editStatus" required>
                             <option value="في الانتظار">في الانتظار</option>
                             <option value="تحت الصيانة">تحت الصيانة</option>
                             <option value="مكتمل">مكتمل</option>
@@ -1571,7 +1547,7 @@
             <div class="modal-content">
                 <span class="close" onclick="closeInvoice()">&times;</span>
                 <div id="invoiceContent"></div>
-                <button onclick="downloadInvoicePDF()">تحميل الفاتورة PDF</button>
+                <button onclick="downloadInvoicePDF()">تحميل PDF</button>
             </div>
         </div>
     </div>
